--- a/.devcontainer/docker-compose.debug.yml
+++ b/.devcontainer/docker-compose.debug.yml
@@ -1,10 +1,41 @@
-version: '3.4'
-
 networks:
   devops-ic-collector-net:
     driver: bridge
 
 services:
+  sonarqube:
+    image: sonarqube:10.4.1-community
+    command: -Dsonar.ce.javaOpts=-Xmx1192m -Dsonar.web.javaOpts=-Xmx1192m
+    restart: unless-stopped
+    container_name: sonarqube
+    depends_on:
+      - sonarqube_db
+    ports:
+      - "9000:9000"
+    networks:
+      - devops-ic-collector-net
+    environment:
+      - SONARQUBE_JDBC_URL=jdbc:postgresql://sonarqube_db:5432/sonar
+      - SONARQUBE_JDBC_USERNAME=sonar
+      - SONARQUBE_JDBC_PASSWORD=sonar
+    volumes:
+      - ./volumes/sonarqube/data:/opt/sonarqube/data
+      - ./volumes/sonarqube/extensions:/opt/sonarqube/extensions
+      - ./volumes/sonarqube/logs:/opt/sonarqube/logs
+
+  sonarqube_db:
+    image: postgres:16.3
+    container_name: sonarqube_db
+    restart: unless-stopped
+    networks:
+      - devops-ic-collector-net
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+    volumes:
+      - ./volumes/postgres/postgresql:/var/lib/postgresql
+      - ./volumes/postgres/data:/var/lib/postgresql/data
+
   devops-ci-collector-debug:
     env_file:
       - ../.env
