--- a/.devcontainer/docker-compose.debug.yml
+++ b/.devcontainer/docker-compose.debug.yml
@@ -44,7 +44,9 @@ services:
       dockerfile: debug.Dockerfile
       target: debug
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       - ..:/usr/src/app
+      - ../repos/:/usr/src/app/repos/
     networks:
       - devops-ic-collector-net
     ports:
